# Teleop-Vehicle

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.provider  Dockerfile.publisher  Dockerfile.subscriber  Documentation.md  LICENSE  ModelCarCAN.dbc  README.md  custom_config.json5  dbc_default_values.json  docker-compose.yml  own_vss.json  vss.json
VSS/: VehicleSignalSpecification.vspec
VSS/overlays/extansions/: Teleop.vspec
VSS/overlays/extansions/Teleop/: Teleop.vspec
VSS/overlays/extensions/DBC/: DBC_mapping.vspec
VSS/overlays/extensions/Teleop/: Teleop.vspec
VSS/overlays/profiles/: TeleopVehicle.vspec  teleoperated_vehicle.vspec
config/: dbc_feeder.ini
docs/CAN_Provider/: overview.md
docs/GStreamer/: overview.md
docs/VSS-Vspec/: building-guide.md  structure.md
docs/Zenoh-Kuksa-Provider/: overview.md
docs/kuksa_databroker/: overview.md
docs/templates/: Teleop_Overview.excalidraw
docs/zenoh_network/: overview.md
